# simple-lang

./: .gitignore  .project_env  Makefile  README.md  notes.md  setup  showdocs
docs/: Makefile  doxygen.cfg  notes.md
src/: CMakeLists.txt  Makefile  cmdline.c  cmdline.h  errors.c  errors.h  filebuf.c  filebuf.h  import.c  import.h  main.c  mem.c  mem.h  ptrlst.c  ptrlst.h  scanner.c  scanner.h  str.c  str.h  tokens.c  tokens.h
src/scripts/: Makefile  ast.c.bak  ast.h.bak  gen_parser.py  grammar.txt  gtobison.py  notes.txt  parser.c  parser.h  token_types.h  tokens.h  tokens.h.bak
src/scripts/backup/: ast.c.bak  ast.h.bak  gen_parser.py  parser.c.bak  parser.h.bak  tokens.c  tokens.h.bak
tests/: iftest.simp  tst1.simp  tst2.simp
